# maniac

./: CMakeLists.txt  README.md
src/: common.h  config.h
src/maniac/: maniac.cpp
src/osu/: internal_imp.h  osu.cpp  osu.h
src/process/: process.cpp  process.h
